fix navbar on mobile and desktop

--- a/app/globals.css
+++ b/app/globals.css
@@ -108,7 +108,7 @@
   }
 
   body {
-    @apply bg-background text-foreground font-sans transition-colors duration-500 ease-in-out;
+    @apply bg-background text-foreground font-sans transition-colors duration-300 ease-in-out;
   }
 }
 
